--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,38 @@
     <script src="./bundle.js" defer></script>
   </head>
   <body>
+    <div id="activity-container">
+      <div id="activity">
+        <h2>Hotels</h2>
+        <select id="hotel-select">
+          <option value="American">American flamingo</option>
+          <option value="Andean">Andean flamingo</option>
+          <option value="Chilean">Chilean flamingo</option>
+          <option value="Greater">Greater flamingo</option>
+          <option value="James's">James's flamingo</option>
+          <option value="Lesser">Lesser flamingo</option>
+        </select>
+        <h2>Restaurants</h2>
+        <select id="restaurant-select">
+          <option value="American">American flamingo</option>
+          <option value="Andean">Andean flamingo</option>
+          <option value="Chilean">Chilean flamingo</option>
+          <option value="Greater">Greater flamingo</option>
+          <option value="James's">James's flamingo</option>
+          <option value="Lesser">Lesser flamingo</option>
+        </select>
+        <h2>Things to do</h2>
+        <select id="activity-select">
+          <option value="American">American flamingo</option>
+          <option value="Andean">Andean flamingo</option>
+          <option value="Chilean">Chilean flamingo</option>
+          <option value="Greater">Greater flamingo</option>
+          <option value="James's">James's flamingo</option>
+          <option value="Lesser">Lesser flamingo</option>
+        </select>
+      </div>
+      <div id="itinerary"></div>
+    </div>
     <div id="map"></div>
   </body>
 </html>
